TIKA-4583 - Add Maven options for module accessibility in development mode