@@ -17,4 +17,10 @@ echo "Plugins will be loaded from target/classes directories"
 echo "Press Ctrl+C to stop the server"
 echo ""
 
+export MAVEN_OPTS="--add-opens=java.base/java.nio=ALL-UNNAMED \
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+--add-opens=java.base/java.lang=ALL-UNNAMED \
+--add-opens=java.base/java.util=ALL-UNNAMED \
+--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED"
+
 mvn exec:java -Pdev -Dconfig.file="$CONFIG_FILE"
